# spinner

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
apps/example/src/: main.cpp
cmake/: clang.toolchain.cmake  config.cmake
config/: config.cmake  spinnerconfig.h.in
example/: CMakeLists.txt
example/src/: main.cpp
libs/: CMakeLists.txt
libs/spinner/include/: spinner.h
libs/spinner/src/: spinner.cpp
profiles/: windows_profile
spinner/: CMakeLists.txt
spinner/include/: spinner.h
spinner/src/: spinner.cpp
